# DOTA-Net

./: .gitignore  README.md  pyproject.toml
FasterRCNN/experiments/dota_FasterRCNN/exp_002/: events.out.tfevents.1743266335.hpdar01c02s04.9073.0
FasterRCNN/experiments/dota_FasterRCNN/exp_003/: events.out.tfevents.1743329930.hpdar01c04s02.28426.0
code/: 01-DOTA_explore_Dataset.ipynb  01-DOTA_padding.py  01-DOTA_prepocessing.py  01-DOTA_sliding_window.py  02-DOTA_FasterRCNN.py  02-DOTA_model_training.cmd  03-DOTA_Inference_visualizations.ipynb  03_Inference.py
code/utils/: dataset.py  preprocess_dota.py  training.py  visualization.py
